Node action with undo handling

--- a/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelectorModal.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelectorModal.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <local:ScopedSelector SelectedChanged="Selector_SelectedChanged" x:Name="Selector" AllowedSelectedNodes="Task,Workflow" />
+        <local:ScopedSelector SelectedChanged="Selector_SelectedChanged" x:Name="Selector" />
 
         <Button
             Command="{Binding SelectCommand}"
