--- a/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelectorTree.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelectorTree.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Scopes.Components.ScopedSelector"
+    x:Class="Automation.App.Views.WorkPages.Scopes.Components.ScopedSelectorTree"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,13 +10,13 @@
     xmlns:components="clr-namespace:Automation.App.Views.WorkPages.Components"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     mc:Ignorable="d">
-    <Grid DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:ScopedSelector}}}">
+    <Grid DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:ScopedSelectorTree}}}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <Grid Margin="2">
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="auto" />
@@ -32,7 +32,7 @@
                 Click="Add_Click"
                 Grid.Column="1"
                 ToolTip="Add new"
-                Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelector}}">
+                Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelectorTree}}">
                 <Button.ContextMenu>
                     <local:ScopedContextMenu CurrentScope="{Binding CurrentScope}" Selected="{Binding Selected}" />
                 </Button.ContextMenu>
@@ -41,13 +41,14 @@
         </Grid>
 
         <TreeView
+            Margin="0,2,0,0"
             Grid.Row="1"
             Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
             MinWidth="200"
             ItemsSource="{Binding RootScope.SortedChildrens}"
             PreviewMouseRightButtonDown="TreeView_PreviewMouseRightButtonDown"
             SelectedItemChanged="TreeView_SelectedItemChanged"
-            Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelector}}">
+            Tag="{Binding RelativeSource={RelativeSource AncestorType=local:ScopedSelectorTree}}">
             <TreeView.ContextMenu>
                 <local:ScopedContextMenu CurrentScope="{Binding CurrentScope}" Selected="{Binding Selected}" />
             </TreeView.ContextMenu>
