--- a/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelector.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelector.xaml
@@ -1,25 +1,26 @@
 ﻿<UserControl
-    x:Class="Automation.App.Views.WorkPages.Scopes.ScopeElements"
+    x:Class="Automation.App.Views.WorkPages.Scopes.Components.ScopedSelector"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Scopes"
+    xmlns:local="clr-namespace:Automation.App.Views.WorkPages.Scopes.Components"
+    xmlns:viewmodels="clr-namespace:Automation.App.Shared.ViewModels.Work;assembly=Automation.App.Shared"
     xmlns:components="clr-namespace:Automation.App.Views.WorkPages.Components"
-    xmlns:scopes="clr-namespace:Automation.App.Views.WorkPages.Scopes.Components"
     mc:Ignorable="d"
-    d:DesignHeight="450"
-    d:DesignWidth="800">
+    x:Name="ContainerElement">
     <ListBox
+        DataContext="{Binding ElementName=ContainerElement}"
+        Grid.Row="1"
+        ItemsSource="{Binding CurrentScope.SortedChildrens}"
+        SelectedItem="{Binding Selected, Mode=TwoWay}"
         MouseDoubleClick="ListBox_MouseDoubleClick"
-        DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:ScopeElements}}"
-        ItemsSource="{Binding Scope.SortedChildrens}"
-        SelectedItem="{Binding Selected, Mode=TwoWay}">
+        PreviewMouseRightButtonDown="ListBox_PreviewMouseRightButtonDown">
         <ListBox.ContextMenu>
-            <scopes:ScopedContextMenu CurrentScope="{Binding Scope}" Selected="{Binding Selected}" />
+            <local:ScopedContextMenu CurrentScope="{Binding CurrentScope}" Selected="{Binding Selected}" />
         </ListBox.ContextMenu>
         <ListBox.ItemTemplate>
-            <DataTemplate>
+            <DataTemplate DataType="{x:Type viewmodels:ScopedElement}">
                 <StackPanel Orientation="Horizontal">
                     <components:NodeIcon Type="{Binding Type}" Margin="0,0,4,0" />
                     <TextBlock Text="{Binding Name}" />
