--- a/Automation/Automation.App/Views/WorkPages/TasksMainPage.xaml
+++ b/Automation/Automation.App/Views/WorkPages/TasksMainPage.xaml
@@ -7,23 +7,55 @@
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:components="clr-namespace:Automation.App.Views.WorkPages.Components"
     xmlns:scopes="clr-namespace:Automation.App.Views.WorkPages.Scopes.Components"
-    mc:Ignorable="d">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <scopes:ScopedSelectorTree
-            x:Name="SideMenu"
-            Grid.Column="0"
-            SelectedChanged="ScopedSelector_SelectedChanged" />
-        <GridSplitter
-            Grid.Column="1"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Stretch"
-            ShowsPreview="True"
-            Width="2" />
-        <ContentPresenter Grid.Column="2" x:Name="NavigationContent" />
+    mc:Ignorable="d"
+    x:Name="ContainerElement">
+
+    <Grid Grid.Column="2" DataContext="{Binding ElementName=ContainerElement}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <StackPanel Orientation="Horizontal" Margin="2">
+            <TextBox Width="180" />
+            <scopes:ScopedBreadcrumb
+                Scope="{Binding CurrentScope}"
+                ScopeSelected="ScopedBreadcrumb_ScopeSelected"
+                Margin="4,0,0,0" />
+            <StackPanel Orientation="Horizontal" Margin="20,0,0,0">
+                <StackPanel.Style>
+                    <Style TargetType="StackPanel">
+                        <Setter Property="DataContext" Value="{Binding Selected, ElementName=Selector}" />
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Selected, ElementName=Selector}" Value="{x:Null}">
+                                <Setter Property="DataContext" Value="{Binding CurrentScope}" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </StackPanel.Style>
+                <components:NodeIcon Type="{Binding Type}" Margin="0,0,4,0" />
+                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" />
+            </StackPanel>
+        </StackPanel>
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <scopes:ScopedSelector
+                x:Name="Selector"
+                CurrentScope="{Binding CurrentScope, Mode=TwoWay}"
+                Grid.Column="0"
+                SelectionChanged="ScopedSelector_SelectedChanged" />
+            <GridSplitter
+                Grid.Column="1"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Stretch"
+                ShowsPreview="True"
+                Width="2" />
+            <ContentPresenter Grid.Column="2" x:Name="NavigationContent" />
+        </Grid>
     </Grid>
 </UserControl>
