Separated service provider from app

--- a/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelector.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Scopes/Components/ScopedSelector.xaml
@@ -17,7 +17,7 @@
         MouseDoubleClick="ListBox_MouseDoubleClick"
         PreviewMouseRightButtonDown="ListBox_PreviewMouseRightButtonDown">
         <ListBox.ContextMenu>
-            <local:ScopedContextMenu Selected="{Binding Selected ?? CurrentScope}" />
+            <local:ScopedContextMenu Selected="{Binding Current}" />
         </ListBox.ContextMenu>
         <ListBox.ItemTemplate>
             <DataTemplate DataType="{x:Type viewmodels:ScopedElement}">
