--- a/Automation/Automation.App/Views/WorkPages/Workflows/WorkflowPage.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/WorkflowPage.xaml
@@ -12,15 +12,6 @@
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
     mc:Ignorable="d">
     <Grid>
-        <Button
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Click="ButtonParameters_Click">
-            <StackPanel Orientation="Horizontal">
-                <fonts:Icon Text="{x:Static fonts:IconFont.Gear}" />
-                <TextBlock Margin="4,0,0,0">Settings</TextBlock>
-            </StackPanel>
-        </Button>
         <TabControl DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:WorkflowPage}}">
             <TabItem>
                 <TabItem.Header>
@@ -48,5 +39,12 @@
                 </TabItem.Header>
             </TabItem>
         </TabControl>
+        <Button
+            Height="27"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Click="ButtonParameters_Click">
+            <fonts:Icon Text="{x:Static fonts:IconFont.Gear}" />
+        </Button>
     </Grid>
 </UserControl>
