--- a/Automation/Automation.App/Views/WorkPages/Workflows/WorkflowPage.xaml
+++ b/Automation/Automation.App/Views/WorkPages/Workflows/WorkflowPage.xaml
@@ -10,7 +10,9 @@
     xmlns:instances="clr-namespace:Automation.App.Views.WorkPages.Tasks.Instances"
     xmlns:tasks="clr-namespace:Automation.App.Views.WorkPages.Tasks"
     xmlns:fonts="clr-namespace:Joufflu.Shared.Resources.Fonts;assembly=Joufflu.Shared"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    d:DesignHeight="450"
+    d:DesignWidth="800">
     <Grid>
         <TabControl DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:WorkflowPage}}">
             <TabItem>
